[package]
name = "frontend"
version = "0.15.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
cfg-if = {workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }
derive_more = { workspace = true }
futures = "0.3"
js-sys = "0.3.65"
leptos = { workspace = true }
leptos_meta = { version = "0.6.11" }
leptos_router = { version = "0.6.11" }
monaco = { git = "https://github.com/datron/rust-monaco.git" }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = "2.5.0"
wasm-bindgen = "=0.2.89"
web-sys = { version = "0.3.64", features = [
  "Event",
  "Worker",
  "Blob",
  "Window",
  "Storage",
] }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "console_error_panic_hook",
]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[lints]
workspace = true
