[package]
name = "frontend"
version.workspace = true
edition = "2021"
include = ["src/**/*", "src-js/**/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }
derive_more = { workspace = true }
futures = "0.3"
js-sys = "0.3.65"
leptos = { workspace = true }
leptos_meta = { version = "0.6.11" }
leptos_router = { version = "0.6.11" }
monaco = { git = "https://github.com/datron/rust-monaco.git", rev = "5c9c93a" }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"
reqwest = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
superposition_derives = { workspace = true }
superposition_macros = { workspace = true }
superposition_types = { workspace = true, features = [
    "experimentation",
    "api",
] }
url = { workspace = true }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.64", features = [
    "Event",
    "Worker",
    "Blob",
    "Window",
    "Element",
    "DomRect",
    "HtmlElement",
    "UiEvent",
    "MouseEvent",
    "KeyboardEvent",
    "Document",
    "Node",
] }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "console_error_panic_hook",
]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
jsonlogic = ["superposition_types/jsonlogic"]

[lints]
workspace = true
