[package]
name = "service-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env
dotenv = "0.15.0"
# Https server framework
actix = "0.13.0"
actix-web = "4.0.0"
#ORM
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "serde_json", "chrono", "uuid", "postgres_backend"] }
rusoto_kms = "0.48.0"
rusoto_signature = "0.48.0"
bytes = "1.4.0"
rusoto_core = "0.48.0"
base64 = "0.21.2"
urlencoding = "~2.1.2"
jsonschema = "~0.17"
