[package]
name = "service_utils"
description = "utility functions used across crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
aes-gcm = "0.10.3"
anyhow = { workspace = true }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-kms = { workspace = true }
base64 = { workspace = true }
casbin = { version = "2.19.0", features = ["glob"] }
chrono = { workspace = true }
derive_more = { workspace = true }
diesel = { workspace = true }
diesel-adapter = { version = "1.2.0" }
fred = { workspace = true, features = ["metrics"] }
futures-util = { workspace = true }
humantime = { workspace = true }
inventory = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
openidconnect = "3.5.0"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
rand = "0.8"
tokio = { workspace = true }
tokio-metrics = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rs-snowflake = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
superposition_derives = { workspace = true }
superposition_macros = { workspace = true }
superposition_types = { workspace = true, features = [
    "result",
    "api",
    "diesel_derives",
] }
thiserror = { workspace = true }
url = { workspace = true }
urlencoding = "~2.1.2"
uuid = {workspace = true}
tracing-actix-web = { workspace = true }


[lints]
workspace = true
