[package]
name = "superposition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6" }
actix-web = { workspace = true }
anyhow = { workspace = true }
aws-sdk-kms = { workspace = true }
cac_toml = { path = "../cac_toml" }
cfg-if = { workspace = true }
chrono = { workspace = true }
context_aware_config = { path = "../context_aware_config" }
diesel = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.8"
experimentation_platform = { path = "../experimentation_platform" }
fred = { workspace = true, optional = true }
frontend = { path = "../frontend" }
futures-util = { workspace = true }
idgenerator = "2.0.0"
leptos = { workspace = true }
leptos_actix = { version = "0.6.11" }
log = { workspace = true }
openidconnect = "3.5.0"
regex = { workspace = true }
reqwest = { workspace = true }
rs-snowflake = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service_utils = { path = "../service_utils" }
superposition_macros = { path = "../superposition_macros" }
superposition_types = { path = "../superposition_types", features = ["api", "diesel_derives"]}
toml = { workspace = true }
url = { workspace = true }

[features]
high-performance-mode = [
    "context_aware_config/high-performance-mode",
    "service_utils/high-performance-mode",
    "dep:fred",
]

[lints]
workspace = true
