[package]
name = "superposition"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6" }
actix-web = { workspace = true }
anyhow = { workspace = true }
aws-sdk-kms = { workspace = true }
chrono = { workspace = true }
context_aware_config = { path = "../context_aware_config" }
diesel = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.8"
experimentation_platform = { path = "../experimentation_platform" }
fred = { workspace = true, optional = true }
frontend = { path = "../frontend" }
futures-util = { workspace = true }
idgenerator = "2.0.0"
leptos = { workspace = true }
leptos_actix = { version = "0.6.11" }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rs-snowflake = { workspace = true }
serde = { workspace = true }
service_utils = { workspace = true }
superposition_macros = { workspace = true }
superposition_types = { workspace = true, features = [
    "api",
    "diesel_derives",
    "server",
] }

[features]
high-performance-mode = [
    "context_aware_config/high-performance-mode",
    "service_utils/high-performance-mode",
    "dep:fred",
]
jsonlogic = [
    "context_aware_config/jsonlogic",
    "experimentation_platform/jsonlogic",
    "frontend/jsonlogic",
    "service_utils/jsonlogic",
    "superposition_types/jsonlogic",
]

[lints]
workspace = true
