[package]
name = "superposition_client"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.26"
jsonlogic = "0.5.1"
reqwest = { version = "0.11.18", features = ["json"]}
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = {version = "1.29.1", features = ["full"]}
dotenv = "0.15.0"
