[package]
name = "superposition_client"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
jsonlogic = "0.5.1"
reqwest = { version = "0.11.18", features = ["json"]}
once_cell = { version = "1.18.0" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = {version = "1.29.1", features = ["full"]}
dotenv = "0.15.0"
derive_more = "^0.99"
log = "^0.4"
