[package]
name = "superposition_client"
version = "0.4.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
chrono = { workspace = true }
jsonlogic = { workspace = true }
reqwest = { workspace = true , features = ["json"]}
serde = { workspace = true }
serde_json = { workspace = true }
tokio = {version = "1.29.1", features = ["full"]}
dotenv = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }
