[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superposition_client = { path = "../superposition_client" }
chrono = "0.4.26"

# Https server framework
actix = "0.13.0"
actix-web = "4.0.0"
serde_json = "1.0.97"
