[package]
name = "superposition_core"
version.workspace = true
edition = "2021"
description = "Core native library for Superposition FFI bindings"
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
jsonlogic = { workspace = true }
log = { workspace = true }
mini-moka = { version = "0.10.3" }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
superposition_types = { workspace = true, features = ["experimentation", "api"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { workspace = true }
uniffi = { workspace = true }
anyhow = { workspace = true }
thiserror = { version = "1.0.57" }
rand = "0.9.1"

[dev-dependencies]
uniffi = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "superposition_core"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
