[package]
name = "superposition_core"
version.workspace = true
edition = "2021"
rust-version = "1.82.0"
description = "Core native library for Superposition FFI bindings"
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"

[dependencies]
bigdecimal = { workspace = true }
blake3 = { workspace = true }
itertools = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
num-bigint = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
superposition_types = { workspace = true, features = [
    "experimentation",
    "api",
] }
thiserror = { version = "1.0.57" }
toml = { workspace = true, features = ["preserve_order"] }
uniffi = { workspace = true }

[dev-dependencies]
uniffi = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "superposition_core"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[build-dependencies]
cbindgen = "0.26.0"
