[package]
name = "superposition_mcp"
version.workspace = true
edition = "2021"
license = { workspace = true }
homepage = { workspace = true }
readme = "README.md"

[dependencies]
smithy-mcp-runtime = { git = "https://github.com/juspay/smithy-mcp-generator.git", rev = "522aa2462447f66ef8434eb2b846d121aed014ad", features = ["stdio", "http"] }
superposition_sdk = { path = "../superposition_sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
