[package]
name = "superposition_mcp"
version.workspace = true
edition = "2021"
license = { workspace = true }
homepage = { workspace = true }
readme = "README.md"

[dependencies]
smithy-mcp-runtime = { git = "https://github.com/juspay/smithy-mcp-generator.git", rev = "6ec7445755c1410c052947f00eef1dd65011aadc", features = ["stdio", "http"] }
superposition_sdk = { path = "../superposition_sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
