[package]
name = "superposition_provider"
version.workspace = true
edition = "2021"
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = "Open feature provider for Superposition"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
log = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
aws-smithy-types = { version = "1.3.0" }
superposition_core = { workspace = true }

# OpenFeature Rust SDK
open-feature = "0.2.5"

# Generated Smithy Rust SDK for Superposition
superposition_sdk = { workspace = true, features = ["behavior-version-latest"] }

# Superposition types for proper type conversion
superposition_types = { workspace = true }

# CAC TOML parsing for FileDataSource
cac_toml = { path = "../cac_toml" }
toml = "0.8"
pest = "2.7"

# File watching for FileDataSource
notify = "6.1"


[dev-dependencies]
env_logger = "0.11"

[lints]
workspace = true
