[package]
name = "superposition_provider"
version.workspace = true
edition = "2021"
rust-version = "1.82.0"
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = "Open feature provider for Superposition."

[dependencies]
async-trait = "0.1"
aws-smithy-types = { version = "1.3.0" }
chrono = { workspace = true }
log = { workspace = true }
open-feature = "0.2.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
superposition_core = { workspace = true }
superposition_sdk = { workspace = true, features = ["behavior-version-latest"] }
superposition_types = { workspace = true }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
uuid = { workspace = true }

notify = "7"
tokio-util = "0.7"

[dev-dependencies]
env_logger = "0.11"

[lints]
workspace = true
